src/test/compile-fail/put-in-fn.rs
// error-pattern: Non-iter function

fn f() -> int {
  put 10;
}

fn main() {
}